--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   grid-template-rows: 10% auto 10%;
   grid-template-areas:
     "header header header"
-    "left main right"
+    "left main main"
     "footer footer footer";
 }
 
